@@ -19,7 +19,6 @@
 package org.apache.maven.extension.internal;
 
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
@@ -45,7 +44,7 @@ public class CoreExports {
     }
 
     public CoreExports(ClassRealm realm, Set<String> exportedArtifacts, Set<String> exportedPackages) {
-        this.artifacts = Collections.unmodifiableSet(new HashSet<>(exportedArtifacts));
+        this.artifacts = Set.copyOf(exportedArtifacts);
         this.packages = exportedPackages.stream()
                 .collect(collectingAndThen(toMap(identity(), v -> realm), Collections::unmodifiableMap));
     }
